--- a/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
@@ -11,7 +11,7 @@ formats:
   - websites
 author: ldodds
 contributors:
-  - jaygra0919
+  - jaygray0919
 items: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
