--- a/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
@@ -1,10 +1,13 @@
 ---
 $title@: 'FrontMatter substitution'
-description@: 'learn about FrontMatter substitution'
+description@: 'Learn about FrontMatter substitution'
 teaser:
   text@: >-
     Immerse readers in visual and tappable stories they can share anywhere on the open web.
 $order: 2
+author: jaygray0919
+contributors:
+  - gigster99
 ---
 
 ## Success
@@ -16,7 +19,7 @@ $order: 2
   <p> {{ _(doc.teaser.text) }} </p>
 </div>
 
-## collapsible text
+## Also see result in collapsible text
 
 <details>
 <summary>Click to see FM content</summary>
