--- a/pages/content/amp-dev/documentation/tutorial-h/101/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b104.md
@@ -1,23 +1,12 @@
 ---
 $title@: 'YAML sans NL'
 description@: 'Read about YAML'
-teaser:
-  icon: airplane
-  label@: 'Read about YAML'
-$titles:
-  teaser@: Chapter 5
-$order: 1
-formats:
-  - websites
+$order: 4
 author: ldodds
-contributors:
-  - jaygray0919
-  - gigster99
-  - mdebellis
 items: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
-## Using 'for item'
+## YAML sans NL using 'for item'
 
 {% for item in doc.items.content %}
 <h3 class=""> {{ item.heading_1 | safe }} </h3>
