--- a/pages/content/amp-dev/documentation/tutorial-h/102/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/102/b102.md
@@ -1,13 +1,16 @@
 ---
-$title@: page 4-2-1
+$title@: 'Format HTML'
+description@: ''
 $order: 1
+author: jaygray0919
+contributors:
+  - gigster99
 ---
 
-## toc: false
 
 ## Code using back-tick
 
-When in doubt, do what’s best for the end user experience, even if it means that it’s harder for the page creator to build or for the library developer to implement.
+### HTML line numbers
 
 ```html hl_lines="3 4 5"
 <amp-ad type="a9"
@@ -17,6 +20,9 @@ When in doubt, do what’s best for the end user experience, even if it means th
     data-aax_src="302">
 </amp-ad>
 ```
+
+***
+
 
 ```html hl_lines="6"
 <amp-ad type="a9"
