--- a/pages/content/amp-dev/documentation/tutorial-h/102/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/102/b103.md
@@ -1,10 +1,12 @@
 ---
-$title@: page 4-2-2
+$title@: 'Format images'
+description@: ''
 $order: 2
 toc: true
+author: jaygray0919
+contributors:
+  - gigster99
 ---
-
-## toc: true
 
 ### layout=responsive (default)
 
