--- a/pages/content/amp-dev/documentation/tutorial-h/103/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/103/a101.md
@@ -1,15 +1,15 @@
 ---
 $title@: 'AMP Libraries'
+description@: 'Ready for content'
 $titles:
   teaser: 'Chapter 3'
 teaser:
   icon: airplane
   label: 'Learn about AMP Libraries'
-description@: 'Ready for content'
 $order: 1
 ---
 
-## Target AMP Libraries
+## Target Libraries
 
 - amp-list; amp-mustache
 - amp-story
