--- a/pages/content/amp-dev/documentation/tutorial-h/103/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/103/b103.md
@@ -2,13 +2,16 @@
 $title@: 'How ABC works'
 descriptions@: 'The following optimizations combined are the reason ABC pages are so fast they appear to load instantly.'
 $order: 3
+author: jaygray0919
+contributors:
+  - gigster99
 ---
-{% do doc.styles.addCssFile('css/components/templates/custom-content.css') %}
-{% do doc.styles.addCssFile('css/components/molecules/code-snippet.css') %}
+{# {% do doc.styles.addCssFile('css/components/templates/custom-content.css') %} #}
+{# {% do doc.styles.addCssFile('css/components/molecules/code-snippet.css') %} #}
 
 <section class="ap--container">
 
-  {% do doc.styles.addCssFile('/css/components/molecules/copy.css') %}
+  {# {% do doc.styles.addCssFile('/css/components/molecules/copy.css') %} #}
   <div class="ap-m-copy ap-m-copy-left-small">
     <h2>{{ _('Execute all ABC JavaScript asynchronously') }}</h2>
     <p>{{ _('JavaScript is powerful, it can modify just about every aspect of the page, but it can also block DOM construction and delay page rendering (see also <a href="https://developers.google.com/web/fundamentals/performance/critical-rendering-path/adding-interactivity-with-javascript">Adding interactivity with JavaScript</a>). To keep JavaScript from delaying page rendering, ABC allows only asynchronous JavaScript.') }}</p>
