--- a/pages/content/amp-dev/documentation/tutorial-h/103/b106.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/103/b106.md
@@ -1,7 +1,11 @@
 ---
-$title@: amp-library test 3
+$title@: 'amp-library test 3'
+description@: ''
 $order: 6
 toc: true
+author: jaygray0919
+contributors:
+  - gigster99
 ---
 
 ## test
