--- a/pages/content/amp-dev/documentation/tutorial-h/104/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/a101.md
@@ -1,9 +1,11 @@
 ---
-$title@: 'Assortment'
+$title@: 'AMP Libraries'
+description@: 'Ready for content'
 $titles:
   teaser: 'Chapter 4'
 teaser:
   icon: airplane
+$title@: 'Assortment'
   label: 'Assortment'
 description@: 'reorganize'
 $order: 1
