--- a/pages/content/amp-dev/documentation/tutorial-h/104/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/b102.md
@@ -1,8 +1,12 @@
 ---
-$title@: page 102
+$title@: 'Format text and tables'
+description@: ''
 toc: true
 $order: 2
-author: mdebellis
+author: jaygray0919
+contributors:
+  - gigster99
+  - mdebellis
 ---
 
 ## toc: true
