--- a/pages/content/amp-dev/documentation/tutorial-h/104/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/b103.md
@@ -1,11 +1,16 @@
 ---
-$title@: page 103
+$title@: 'YAML - benefits'
+description@: ''
 $order: 3
 toc: false
+author: jaygray0919
+contributors:
+  - gigster99
+  - mdebellis
 benefits: !g.yaml /shared/data/benefits.yaml
 ---
 
-## YAML NL benefits - Success
+## NL benefits - Success
 
 {% for benefit in doc.benefits.stories.developer %}
   <div class="">
