--- a/pages/content/amp-dev/documentation/tutorial-h/104/b105.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/b105.md
@@ -1,8 +1,12 @@
 ---
-$title@: Pizza SVG with FM substitution
-description@: Pizza SVG
+$title@: 'Pizza SVG with FM substitution'
+description@: 'Pizza SVG'
 toc: false
 $order: 5
+author: jaygray0919
+contributors:
+  - gigster99
+  - mdebellis
 labels:
   aaa@: Vlad
   bbb@: dealer of Mozzarella, Italian
