--- a/pages/content/amp-dev/documentation/tutorial-h/105/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/105/b102.md
@@ -1,11 +1,15 @@
 ---
-$title@: Organization
+$title@: 'Markdowm HTML links'
 description@: ''
 $order: 2
 author: ldodds
+contributors:
+  - jaygray0919
+  - gigster99
+  - mdebellis
 ---
 
-## links
+## Examples
 
 Here is my [Homepage][MichaelCurrin home] example 1
 
@@ -14,7 +18,7 @@ Here is my [Homepage][MichaelCurrin home] example 1
 Here is my [Homepage][1] with a numbered reference.
 
 
-### reference links (not visible!)
+### Reference links below (not visible!)
 
 [MichaelCurrin home]: https://michaelcurrin.github.io/
 
