--- a/pages/content/amp-dev/documentation/tutorial-h/105/b105.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/105/b105.md
@@ -1,18 +1,24 @@
 ---
-$title@: YAML Benefits
+$title@: 'YAML Benefits'
 description@: 'injecting YAML benefits'
 $order: 5
 toc: false
 author: jaygray0919
+contributors:
+  - mdebellis
+  - gigster99
+  - mdebellis
 benefits: !g.yaml /shared/data/benefits.yaml
 ---
 
 ## NL success
 
+### Using 'for benefit'
+
 {% for benefit in doc.benefits.stories.developer %}
   <div class="">
-   <h3 class=""> {{ _(benefit.headline) }} </h3>
-    <p class=""> {{ _(benefit.text) }} </p>
+   <h3 class="">{{ _(benefit.headline) }}</h3>
+    <p class="">{{ _(benefit.text) }}</p>
   </div>
 {% endfor %}
 
