--- a/pages/content/amp-dev/documentation/tutorial-h/103/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/103/b104.md
@@ -1,7 +1,11 @@
 ---
-$title@: amp-library test 1
+$title@: 'amp-library test 1'
+description@: ''
 $order: 4
 toc: true
+author: jaygray0919
+contributors:
+  - gigster99
 ---
 
 ## test
