--- a/pages/content/amp-dev/documentation/tutorial-h/103/b105.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/103/b105.md
@@ -1,7 +1,11 @@
 ---
-$title@: amp-library test 2
+$title@: 'amp-library test 2'
+description@: ''
 $order: 5
 toc: true
+author: jaygray0919
+contributors:
+  - gigster99
 ---
 
 ## test
