--- a/pages/content/amp-dev/documentation/tutorial-h/104/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/b104.md
@@ -1,10 +1,15 @@
 ---
-$title@: Animation
+$title@: 'Animation'
+description@: ''
 $order: 4
 toc: false
+author: jaygray0919
+contributors:
+  - gigster99
+  - mdebellis
 ---
 
-## Animation test
+## Example
 
 <figure class="centered-fig">
   <amp-anim width="300" height="533" layout="fixed" alt="AMP Story Example" src="https://github.com/ampproject/amphtml/raw/main/extensions/amp-story/img/amp-story.gif">
