--- a/pages/content/amp-dev/documentation/tutorial-h/105/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/105/b104.md
@@ -1,15 +1,21 @@
 ---
-$title@: YAML FAQ
+$title@: 'YAML FAQ'
 description@: 'injecting YAML FAQ'
 $order: 4
 toc: false
 author: jaygray0919
+contributors:
+  - mdebellis
+  - gigster99
+  - mdebellis
 contents: !g.yaml /shared/data/pizza-sub.yaml
 ---
 
-## YAML FAQ NL
+## FAQ NL fails
 
-### NL fail - may be version with ABC
+### May be caused by version with ABC
+
+### Using 'for content'
 
 {% for content in doc.contents.overview %}
 <p class=""> {{ _(content.text_01) }} </p>
