--- a/pages/content/amp-dev/documentation/tutorial-h/103/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/103/a101.md
@@ -7,9 +7,12 @@ teaser:
   icon: airplane
   label: 'Learn about AMP Libraries'
 $order: 1
+author: jaygray0919
+contributors:
+  - gigster99
 ---
 
-## Target Libraries
+### Target Libraries
 
 - amp-list; amp-mustache
 - amp-story
