--- a/pages/content/amp-dev/documentation/tutorial-h/104/b110.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/b110.md
@@ -3,7 +3,7 @@ $title@: 'test - PO and HTML'
 description@: ''
 $order: 10
 toc: false
-benefits: !g.yaml /shared/data/tutorial-p-test.yaml
+content: !g.yaml /shared/data/tutorial-p-test.yaml
 ---
 
 ### NL and 'safe'
