--- a/pages/content/amp-dev/documentation/tutorial-h/104/b110.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/b110.md
@@ -3,16 +3,17 @@ $title@: 'test - PO and HTML'
 description@: ''
 $order: 10
 toc: false
-content: !g.yaml /shared/data/tutorial-p-test.yaml
+items: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
 ### NL and 'safe'
 
-{% for x in doc.content.items %}
+{% for item in doc.items.content %}
   <div class="">
-    <p class="">{{ _(x.text_1) }}</p>
-    <p class="">{{ x.text_2 | safe }}</p>
-    <p class="">{{ x.text_3 | safe }}</p>
+    <p class="">{{ _(item.text_1) }}</p>
+    <p class="">{{ _(item.text_4) }}</p>
+    <p class="">{{ item.text_5 | safe }}</p>
+    <p class="">{{ item.text_6 | safe }}</p>
   </div>
 {% endfor %}
 
