--- a/pages/content/amp-dev/documentation/tutorial-h/104/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/b103.md
@@ -10,12 +10,12 @@ contributors:
 benefits: !g.yaml /shared/data/benefits.yaml
 ---
 
-## NL benefits - Success
+## NL benefits - added single quote
 
 {% for benefit in doc.benefits.stories.developer %}
   <div class="">
-    <h3 class=""> {{ _(benefit.headline | trim) }} </h3>
-     <p class=""> {{ _(benefit.text | trim) }} </p>
+    <h3 class=""> {{ _('benefit.headline') }} </h3>
+     <p class=""> {{ _('benefit.text') }} </p>
   </div>
 {% endfor %}
 
