--- a/pages/content/amp-dev/documentation/tutorial-h/104/b110.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/b110.md
@@ -10,8 +10,8 @@ items: !g.yaml /shared/data/tutorial-p.yaml
 
 {% for item in doc.items.content %}
   <div class="">
-    <p class="">{{ _(item.text_1) }}</p>
-    <p class="">{{ _(item.text_4) }}</p>
+    <p class="">{{ _('item.text_1') }}</p>
+    <p class="">{{ _('item.text_4') }}</p>
     <p class="">{{ item.text_5 | safe }}</p>
     <p class="">{{ item.text_6 | safe }}</p>
   </div>
