--- a/pages/content/amp-dev/documentation/tutorial-h/104/b110.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/b110.md
@@ -8,12 +8,8 @@ items: !g.yaml /shared/data/tutorial-p.yaml
 
 ### NL and 'safe'
 
-{% for item in doc.items.content %}
-  <div class="">
-    <p class="">{{ _('item.text_1') }}</p>
-    <p class="">{{ _('item.text_4') }}</p>
-    <p class="">{{ item.text_5 | safe }}</p>
-    <p class="">{{ item.text_6 | safe }}</p>
-  </div>
-{% endfor %}
+{% if items.content %}<p class="">{{ _(item.text_1) }}</p>{% endif %}
+{% if items.content %}<p class="">{{ _(item.text_4) }}</p>{% endif %}
+{% if items.content %}<p class="">{{ item.text_5 | safe }}</p>{% endif %}
+{% if items.content %}<p class="">{{ item.text_6 | safe }}</p>{% endif %}
 
