--- a/pages/content/amp-dev/documentation/tutorial-h/104/b110.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/b110.md
@@ -8,8 +8,8 @@ items: !g.yaml /shared/data/tutorial-p.yaml
 
 ### NL and 'safe'
 
-{% if items.content %}<p class="">{{ _(item.text_1) }}</p>{% endif %}
-{% if items.content %}<p class="">{{ _(item.text_4) }}</p>{% endif %}
-{% if items.content %}<p class="">{{ item.text_5 | safe }}</p>{% endif %}
-{% if items.content %}<p class="">{{ item.text_6 | safe }}</p>{% endif %}
+<p class="">{% if items.content %}{{ _(item.text_1) }}{% endif %}</p>
+<p class="">{% if items.content %}{{ _(item.text_4) }}{% endif %}</p>
+<p class="">{% if items.content %}{{ item.text_5 | safe }}{% endif %}</p>
+<p class="">{% if items.content %}{{ item.text_6 | safe }}{% endif %}</p>
 
