--- a/pages/content/amp-dev/documentation/tutorial-h/104/b110.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/b110.md
@@ -8,8 +8,8 @@ items: !g.yaml /shared/data/tutorial-p.yaml
 
 ### NL and 'safe'
 
-<p class="">{% if items.content %}{{ _(item.text_1) }}{% endif %}</p>
-<p class="">{% if items.content %}{{ _(item.text_4) }}{% endif %}</p>
-<p class="">{% if items.content %}{{ item.text_5 | safe }}{% endif %}</p>
-<p class="">{% if items.content %}{{ item.text_6 | safe }}{% endif %}</p>
+<p class="">{% if text_1 %}{{ _(text_1) }}{% endif %}</p>
+<p class="">{% if text_4 %}{{ _(text_4) }}{% endif %}</p>
+<p class="">{% if text_5 %}{{ text_5 | safe }}{% endif %}</p>
+<p class="">{% if text_6 %}{{ text_6 | safe }}{% endif %}</p>
 
