--- a/pages/content/amp-dev/documentation/tutorial-h/104/b110.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/b110.md
@@ -8,8 +8,8 @@ items: !g.yaml /shared/data/tutorial-p.yaml
 
 ### NL and 'safe'
 
-<p class="">{% if item in doc.items.content.text_1 %}{{ _(item.text_1) }}{% endif %}</p>
-<p class="">{% if item in doc.items.content.text_4 %}{{ _(item.text_4) }}{% endif %}</p>
-<p class="">{% if item in doc.items.content.text_5 %}{{ item.text_5 | safe }}{% endif %}</p>
-<p class="">{% if item in doc.items.content.text_6 %}{{ item.text_6 | safe }}{% endif %}</p>
+<p class="">{% if item in doc.items.content %}{{ _(item.text_1) }}{% endif %}</p>
+<p class="">{% if item in doc.items.content %}{{ _(item.text_4) }}{% endif %}</p>
+<p class="">{% if item in doc.items.content %}{{ item.text_5 | safe }}{% endif %}</p>
+<p class="">{% if item in doc.items.content %}{{ item.text_6 | safe }}{% endif %}</p>
 
