--- a/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
@@ -1,9 +1,9 @@
 ---
-$title@: 'YAML sans NL'
-description@: 'Read about YAML sans NL'
+$title@: 'YAML'
+description@: 'Read about YAML'
 teaser:
   icon: airplane
-  label@: 'YAML sans NL'
+  label@: 'YAML'
 $titles:
   teaser@: 'Chapter 1'
 $order: 1
@@ -12,15 +12,7 @@ formats:
 author: ldodds
 contributors:
   - jaygray0919
-items: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
-## YAML sans NL using 'for x'
+## YAML
 
-{% for x in doc.items.content %}
-<h3 class=""> {{ x.heading_1 | safe }} </h3>
- <p class=""> {{ x.heading_2 | safe }} </p>
- <p class=""> {{ x.text_1 }} </p>
- <p class=""> {{ x.text_2 }} </p>
- <p class=""> {{ x.text_3 | safe }} </p>
-{% endfor %}
