--- a/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
@@ -1,31 +1,23 @@
 ---
-$title@: 'FrontMatter substitution'
-description@: 'Learn about FrontMatter substitution'
-teaser:
-  text@: >-
-    Immerse readers in visual and tappable stories they can share anywhere on the open web.
+$title@: 'YAML benefits'
+description@: 'injecting YAML benefits'
 $order: 2
-author: jaygray0919
+author: ldodds
 contributors:
+  - jaygray0919
   - gigster99
+  - mdebellis
+benefits: !g.yaml /shared/data/benefits.yaml
 ---
 
-## Success
+## Loop 'for benefit'
 
-- frontmatter substitution
-- NL test
+### NL success
 
-<div class="teaser">
-  <p> {{ _(doc.teaser.text) }} </p>
-</div>
+{% for benefit in doc.benefits.stories.developer %}
+  <div class="">
+   <h3 class="">{{ _(benefit.headline) }}</h3>
+    <p class="">{{ _(benefit.text) }}</p>
+  </div>
+{% endfor %}
 
-## Also see result in collapsible text
-
-<details>
-<summary>Click to see FM content</summary>
-  
-<div class="teaser">
-  <p> {{ _(doc.teaser.text) }} </p>
-</div>
-
-</details
