--- a/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
@@ -1,23 +1,53 @@
 ---
-$title@: 'Markdown links'
-description@: 'Learn about Markdown links'
+$title@: 'YAML tutorial-p'
+description@: 'Read about YAML tutorial-p'
 $order: 3
+author: ldodds
+contributors:
+  - jaygray0919
+  - gigster99
+  - mdebellis
+items: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
-## links
+## Selector 'for item'
 
-Here is my [Homepage][MichaelCurrin home] example 1
+### NL - no
 
-[Here][MichaelCurrin home] is my example 2
+{% for item in doc.items.content %}
+  <div class="">
+    <h3 class="">{{ item.heading_1 | safe }}</h3>
+     <p class="">{{ item.heading_2 | safe }}</p>
+     <p class="">{{ item.text_1 }}</p>
+     <p class="">{{ item.text_2 }}</p>
+     <p class="">{{ item.text_3 | safe }}</p>
+  </div>
+{% endfor %}
 
-Here is my [Homepage][1] with a numbered reference.
+
+## Selector 'for x'
+
+### NL - no
+
+{% for x in doc.items.content %}
+  <div class="">
+    <h3 class="">{{ x.heading_1 | safe }}</h3>
+     <p class="">{{ x.heading_2 | safe }}</p>
+     <p class="">{{ x.text_1 }}</p>
+     <p class="">{{ x.text_2 }}</p>
+     <p class="">{{ x.text_3 | safe }}</p>
+  </div>
+{% endfor %}
 
 
-### reference links (not visible)
+## Selector 'item in items' - 'if'
 
-[MichaelCurrin home]: https://michaelcurrin.github.io/
-
-[1]: https://michaelcurrin.github.io/
-
-[Homepage]: https://michaelcurrin.github.io/
+{% for item in items %}
+  <div class="">
+    {% if text_1 %}<p class="">{{ _(text_1) }}{% endif %}</p>
+    {% if text_4 %}<p class="">{{ _(text_4) }}{% endif %}</p>
+    {% if text_5 %}<p class="">{{ text_5 | safe }}{% endif %}</p>
+    {% if text_6 %}<p class="">{{ text_6 | safe }}{% endif %}</p>
+  </div>
+{% endfor %}
 
