--- a/pages/content/amp-dev/documentation/tutorial-h/101/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b104.md
@@ -1,17 +1,37 @@
 ---
-$title@: 'YAML sans NL'
-description@: 'Read about YAML'
+$title@: 'YAML pizza-sub'
+description@: 'injecting YAML pizza-sub'
 $order: 4
 author: ldodds
-items: !g.yaml /shared/data/tutorial-p.yaml
+contributors:
+  - jaygray0919
+  - gigster99
+  - mdebellis
+contents: !g.yaml /shared/data/pizza-sub.yaml
 ---
 
-## YAML sans NL using 'for item'
+## Selector 'for content in doc.contents.overview'
 
-{% for item in doc.items.content %}
-<h3 class=""> {{ item.heading_1 | safe }} </h3>
- <p class=""> {{ item.heading_2 | safe }} </p>
- <p class=""> {{ item.text_1 }} </p>
- <p class=""> {{ item.text_2 }} </p>
- <p class=""> {{ item.text_3 | safe }} </p>
+## NL fails - may be caused by version with ABC
+
+{% for content in doc.contents.overview %}
+<div class="">
+  <p class="">{{ _(content.text_01) }}</p>
+  <p class="">{{ _(content.text_02) }}</p>
+  <p class="">{{ _(content.text_03) }}</p>
+  <p class="">{{ _(content.text_04) }}</p>
+</div>
 {% endfor %}
+
+
+## Selector 'for content in contents.overview'
+
+{% for content in contents.overview %}
+<div class="">
+  <p class="">{{ _(content.text_01) }}</p>
+  <p class="">{{ _(content.text_02) }}</p>
+  <p class="">{{ _(content.text_03) }}</p>
+  <p class="">{{ _(content.text_04) }}</p>
+</div>
+{% endfor %}
+
