--- a/pages/content/amp-dev/documentation/tutorial-h/101/b106.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b106.md
@@ -1,10 +1,11 @@
 ---
 $title@: 'Pizza SVG with FM substitution'
 description@: 'Pizza SVG'
+$order: 6
 toc: false
-$order: 5
-author: jaygray0919
+author: ldodds
 contributors:
+  - jaygray0919
   - gigster99
   - mdebellis
 labels:
