--- a/pages/content/amp-dev/documentation/tutorial-h/101/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b104.md
@@ -7,31 +7,20 @@ contributors:
   - jaygray0919
   - gigster99
   - mdebellis
-contents: !g.yaml /shared/data/pizza-sub.yaml
+items: !g.yaml /shared/data/pizza-sub.yaml
 ---
 
-## Selector 'for content in doc.contents.overview'
+## Selector 'for item in doc.items.overview'
 
 ## NL fails - may be caused by version with ABC
 
-{% for content in doc.contents.overview %}
+{% for item in doc.items.overview %}
 <div class="">
-  <p class="">{{ _(content.text_01) }}</p>
-  <p class="">{{ _(content.text_02) }}</p>
-  <p class="">{{ _(content.text_03) }}</p>
-  <p class="">{{ _(content.text_04) }}</p>
+  <p class="">{{ _(item.text_01) }}</p>
+  <p class="">{{ _(item.text_02) }}</p>
+  <p class="">{{ _(item.text_03) }}</p>
+  <p class="">{{ _(item.text_04) }}</p>
 </div>
 {% endfor %}
 
-
-## Selector 'for content in contents.overview'
-
-{% for content in contents.overview %}
-<div class="">
-  <p class="">{{ _(content.text_01) }}</p>
-  <p class="">{{ _(content.text_02) }}</p>
-  <p class="">{{ _(content.text_03) }}</p>
-  <p class="">{{ _(content.text_04) }}</p>
-</div>
-{% endfor %}
 
