--- a/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
@@ -40,9 +40,9 @@ items: !g.yaml /shared/data/tutorial-p.yaml
 {% endfor %}
 
 
-## Selector 'item in items' - 'if'
+## Selector 'for item in items' - 'if'
 
-{% for item in items %}
+{% for item in doc.items.content %}
   <div class="">
     {% if text_1 %}<p class="">{{ _(text_1) }}{% endif %}</p>
     {% if text_4 %}<p class="">{{ _(text_4) }}{% endif %}</p>
