--- a/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
@@ -10,22 +10,7 @@ contributors:
 items: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
-## Selector 'for item'
-
-### NL - no
-
-{% for item in doc.items.content %}
-  <div class="">
-    <h3 class="">{{ item.heading_1 | safe }}</h3>
-     <p class="">{{ item.heading_2 | safe }}</p>
-     <p class="">{{ item.text_1 }}</p>
-     <p class="">{{ item.text_2 }}</p>
-     <p class="">{{ item.text_3 | safe }}</p>
-  </div>
-{% endfor %}
-
-
-## Selector 'for x'
+## Selector 'for x in doc.items.content'
 
 ### NL - no
 
@@ -40,7 +25,9 @@ items: !g.yaml /shared/data/tutorial-p.yaml
 {% endfor %}
 
 
-## Selector 'for item in items' - 'if'
+## Selector 'for item in doc.items.content' - 'if'
+
+### NL
 
 {% for item in doc.items.content %}
   <div class="">
