--- a/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
@@ -21,20 +21,22 @@ items: !g.yaml /shared/data/tutorial-p.yaml
      <p class="">{{ x.text_1 }}</p>
      <p class="">{{ x.text_2 }}</p>
      <p class="">{{ x.text_3 | safe }}</p>
+     <p class="">{{ x.text_5 | safe }}</p>
+     <p class="">{{ x.text_6 | safe }}</p>
   </div>
 {% endfor %}
 
 
-## Selector 'for item in doc.items.content' - 'if'
+## Selector 'for x in doc.items.content' - 'if'
 
 ### NL
 
-{% for item in doc.items.content %}
+{% for x in doc.items.content %}
   <div class="">
-    {% if text_1 %}<p class="">{{ _(text_1) }}{% endif %}</p>
-    {% if text_4 %}<p class="">{{ _(text_4) }}{% endif %}</p>
-    {% if text_5 %}<p class="">{{ text_5 | safe }}{% endif %}</p>
-    {% if text_6 %}<p class="">{{ text_6 | safe }}{% endif %}</p>
+    {% if x.text_1 %}<p class="">{{ _(x.text_1) }}{% endif %}</p>
+    {% if x.text_4 %}<p class="">{{ _(x.text_4) }}{% endif %}</p>
+    {% if x.text_5 %}<p class="">{{ x.text_5 | safe }}{% endif %}</p>
+    {% if x.text_6 %}<p class="">{{ x.text_6 | safe }}{% endif %}</p>
   </div>
 {% endfor %}
 
