--- a/pages/content/amp-dev/documentation/tutorial-h/101/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b104.md
@@ -12,7 +12,7 @@ items: !g.yaml /shared/data/pizza-sub.yaml
 
 ## Selector 'for item in doc.items.overview'
 
-## NL fails - may be caused by version with ABC
+#### NL fails - may be caused by version with ABC
 
 {% for item in doc.items.overview %}
 <div class="">
