--- a/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
@@ -10,6 +10,23 @@ contributors:
 items: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
+## Selector 'for x in doc.items.content' - 'if'
+
+### NL
+
+{% for x in doc.items.content %}
+  <div class="">
+    {% if x.heading_1 %}<h3 class="">{{ x.heading_1 | safe }}</h3>
+    {% if x.heading_2 %}<p class="">{{ x.heading_2 | safe }}</p>
+    {% if x.text_1 %}<p class="">{{ _(x.text_1) }}{% endif %}</p>
+    {% if x.text_2 %}<p class="">{{ _(x.text_2) | safe }}</p>
+    {% if x.text_3 %}<p class="">{{ x.text_3 | safe }}</p>
+    {% if x.text_4 %}<p class="">{{ _(x.text_4) }}{% endif %}</p>
+    {% if x.text_5 %}<p class="">{{ x.text_5 | safe }}{% endif %}</p>
+    {% if x.text_6 %}<p class="">{{ x.text_6 | safe }}{% endif %}</p>
+  </div>
+{% endfor %}
+
 ## Selector 'for x in doc.items.content'
 
 ### NL - no
@@ -25,18 +42,3 @@ items: !g.yaml /shared/data/tutorial-p.yaml
      <p class="">{{ x.text_6 | safe }}</p>
   </div>
 {% endfor %}
-
-
-## Selector 'for x in doc.items.content' - 'if'
-
-### NL
-
-{% for x in doc.items.content %}
-  <div class="">
-    {% if x.text_1 %}<p class="">{{ _(x.text_1) }}{% endif %}</p>
-    {% if x.text_4 %}<p class="">{{ _(x.text_4) }}{% endif %}</p>
-    {% if x.text_5 %}<p class="">{{ x.text_5 | safe }}{% endif %}</p>
-    {% if x.text_6 %}<p class="">{{ x.text_6 | safe }}{% endif %}</p>
-  </div>
-{% endfor %}
-
