--- a/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
@@ -16,11 +16,11 @@ items: !g.yaml /shared/data/tutorial-p.yaml
 
 {% for x in doc.items.content %}
   <div class="">
-    {% if x.heading_1 %}<h3 class="">{{ x.heading_1 | safe }}</h3>
-    {% if x.heading_2 %}<p class="">{{ x.heading_2 | safe }}</p>
+    {% if x.heading_1 %}<h3 class="">{{ x.heading_1 | safe }}{% endif %}</h3>
+    {% if x.heading_2 %}<p class="">{{ x.heading_2 | safe }}{% endif %}</p>
     {% if x.text_1 %}<p class="">{{ _(x.text_1) }}{% endif %}</p>
-    {% if x.text_2 %}<p class="">{{ _(x.text_2) | safe }}</p>
-    {% if x.text_3 %}<p class="">{{ x.text_3 | safe }}</p>
+    {% if x.text_2 %}<p class="">{{ _(x.text_2) | safe }}{% endif %}</p>
+    {% if x.text_3 %}<p class="">{{ x.text_3 | safe }}{% endif %}</p>
     {% if x.text_4 %}<p class="">{{ _(x.text_4) }}{% endif %}</p>
     {% if x.text_5 %}<p class="">{{ x.text_5 | safe }}{% endif %}</p>
     {% if x.text_6 %}<p class="">{{ x.text_6 | safe }}{% endif %}</p>
