--- a/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
@@ -7,10 +7,11 @@ contributors:
   - jaygray0919
   - gigster99
   - mdebellis
+translator: jaygray0919
 items: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
-## Selector 'for x in doc.items.content' - 'if'
+## Selector 'for x in doc.items.content' - 'if x.heading_1'
 
 ### NL
 
@@ -27,18 +28,8 @@ items: !g.yaml /shared/data/tutorial-p.yaml
   </div>
 {% endfor %}
 
-## Selector 'for x in doc.items.content'
+## Compound string - doc.items.content.text_1
 
-### NL - no
-
-{% for x in doc.items.content %}
-  <div class="">
-    <h3 class="">{{ x.heading_1 | safe }}</h3>
-     <p class="">{{ x.heading_2 | safe }}</p>
-     <p class="">{{ x.text_1 }}</p>
-     <p class="">{{ x.text_2 }}</p>
-     <p class="">{{ x.text_3 | safe }}</p>
-     <p class="">{{ x.text_5 | safe }}</p>
-     <p class="">{{ x.text_6 | safe }}</p>
-  </div>
-{% endfor %}
+<div class="">
+  <p>{{ _(doc.items.content.text_1) }}</p>
+</div>
