--- a/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
@@ -4,16 +4,15 @@ description@: 'Read about YAML tutorial-p'
 $order: 3
 author: ldodds
 contributors:
-  - jaygray0919
   - gigster99
   - mdebellis
 translator: jaygray0919
 items: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
-## Selector 'for x in doc.items.content' - 'if x.heading_1'
+### Conditional selector 'for x in doc.items.content'
 
-### NL
+#### NL
 
 {% for x in doc.items.content %}
   <div class="">
@@ -28,7 +27,9 @@ items: !g.yaml /shared/data/tutorial-p.yaml
   </div>
 {% endfor %}
 
-## Compound string - doc.items.content.text_1
+### Direct selector 'doc.items.content.text_1'
+
+#### fails
 
 <div class="">
   <p>{{ _(doc.items.content.text_1) }}</p>
