--- a/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
@@ -27,9 +27,7 @@ items: !g.yaml /shared/data/tutorial-p.yaml
   </div>
 {% endfor %}
 
-### Direct selector 'doc.items.content.text_1'
-
-#### fails
+### Direct selector 'doc.items.content.text_1' (fails)
 
 <div class="">
   <p>{{ _(doc.items.content.text_1) }}</p>
