--- a/pages/content/amp-dev/documentation/tutorial-h/103/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/103/b102.md
@@ -1,5 +1,5 @@
 ---
-$title@: 'Reverse Engineering Recipes'
+$title@: 'amp-library mathml'
 description@: 'Read about Reverse Engineering Recipes'
 $order: 2
 author: jaygray0919
