--- a/pages/content/amp-dev/documentation/tutorial-h/103/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/103/b104.md
@@ -1,5 +1,5 @@
 ---
-$title@: 'amp-library test 1'
+$title@: 'amp-library dates'
 description@: ''
 $order: 4
 toc: true
@@ -8,7 +8,7 @@ contributors:
   - gigster99
 ---
 
-## test
+## TBD
 
 - item
 
