--- a/pages/content/amp-dev/documentation/tutorial-h/103/b105.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/103/b105.md
@@ -1,5 +1,5 @@
 ---
-$title@: 'amp-library test 2'
+$title@: 'amp-library list-mustache'
 description@: ''
 $order: 5
 toc: true
@@ -8,7 +8,7 @@ contributors:
   - gigster99
 ---
 
-## test
+## TBD
 
 - item
 
