--- a/pages/content/amp-dev/documentation/tutorial-h/103/b109.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/103/b109.md
@@ -1,12 +1,7 @@
 ---
-$title@: 'AMP Libraries'
-description@: 'Ready for content'
-$titles:
-  teaser: 'Chapter 4'
-teaser:
-  icon: airplane
-  label: 'Assortment'
-$order: 1
+$title@: 'iFrame sans tabs'
+description@: 'Learn about iFrame sans tabs'
+$order: 9
 author: jaygray0919
 contributors:
   - gigster99
