--- a/pages/content/amp-dev/documentation/tutorial-h/103/b106.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/103/b106.md
@@ -1,5 +1,5 @@
 ---
-$title@: 'amp-library test 3'
+$title@: 'amp-library accordion'
 description@: ''
 $order: 6
 toc: true
@@ -8,7 +8,7 @@ contributors:
   - gigster99
 ---
 
-## test
+## TBD
 
 - item
 
